manifests/cloud/vaultwarden/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vaultwarden
  name: vaultwarden
  namespace: cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      containers:
      - image: vaultwarden/server
        name: vaultwarden
        ports:
        - containerPort: 80
        volumeMounts:
        - name: vaultwarden-appdata
          mountPath: /config
      volumes:
        - name: vaultwarden-appdata
          persistentVolumeClaim:
            claimName: vaultwarden-appdata
