manifests/cloud/vaultwarden/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  labels:
    app: vaultwarden
  namespace: cloud
spec:
  selector:
    app: vaultwarden
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
