manifests/cloud/vaultwarden/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  labels:
    app: vaultwarden
  namespace: cloud
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    flame.pawelmalak/type: application
    flame.pawelmalak/name: Vault
    flame.pawelmalak/url: https://vault.cafio.co/
    flame.pawelmalak/icon: lock-outline
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - vault.cafio.co
    secretName: vault.cafio.co-tls
  rules:
  - host: vault.cafio.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vaultwarden
            port:
              number: 80
